examples/datalog/02_relations/10_bulk_operations.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_bulk_ops
Knowledge graph 'test_bulk_ops' created.
Switched to knowledge graph: test_bulk_ops
> .kg use test_bulk_ops
Switched to knowledge graph: test_bulk_ops
> +items[(1, "a"), (2, "b"), (3, "c"), (4, "d"), (5, "e")].
Inserted 5 fact(s) into 'items'.
> ?- items(Id, Val).
5 rows:
  (1, "a")
  (2, "b")
  (3, "c")
  (4, "d")
  (5, "e")
> -items[(2, "b"), (4, "d")].
Script error: Parse error: Expected parentheses: (2, "b"), (4, "d")]
